compiler/actonc/test/typeerrors/ex17.act

a = pow(3,"hej")
